move findAll to a test repository